# AI-Infra-Final-Project

./: .gitignore  PI0FAST_SD_SPEEDUP_HANDOFF.md  README.md  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: README-checkpoint.md
client/: action_buffer.py  client.py  encoder.py  isaac_sim_bridge.py  video_burst.py
common/: types.py
configs/: libero_apples_to_apples.yaml  libero_goal_selected_chunk.yaml  libero_goal_selected_chunk_accuracy_tuned.yaml  libero_goal_selected_chunk_taskaware.yaml  libero_goal_selected_chunk_tuned.yaml  libero_goal_selected_direct_chunk_k2.yaml  libero_goal_selected_direct_chunk_k2_adaptive.yaml  libero_goal_selected_direct_chunk_k2_adaptive_fast.yaml  libero_goal_selected_direct_chunk_k2_taskmix.yaml  libero_goal_selected_direct_chunk_k2_weighted_adaptive.yaml  libero_goal_selected_direct_chunk_k4.yaml  libero_goal_selected_direct_twohead_k3k2.yaml  libero_goal_selected_direct_twohead_k3k2_loose_smooth.yaml  libero_goal_selected_eval.yaml  libero_goal_selected_mixed_direct_recursive.yaml  libero_goal_selected_spec100.yaml  libero_goal_selected_spec75.yaml  libero_goal_selected_spec_adaptive.yaml  libero_one_trial.yaml  libero_specvla_distributed.yaml  libero_specvla_mirror.yaml  libero_specvla_mirror_dagger_r2.yaml  libero_specvla_mirror_nohidden.yaml  libero_specvla_relaxed.yaml  libero_specvla_strict.yaml
docker/: Dockerfile.server  docker-compose.yml
docs/: pi0fast_target_eos.md  pi_system_serving_results.md  serving_platform_submission.md
envs/: __init__.py  aloha_env.py  simpler_env.py
eval/: run_rollout.py
policies/: __init__.py  act_policy.py  openvla_policy.py
proto/: inference.proto  inference_pb2.py  inference_pb2_grpc.py
scripts/: aggregate_trajectory_head_data.py  benchmark_eagle.py  benchmark_pi05_real_serving_runtime.py  benchmark_pi0fast_block_drafter_latency.py  benchmark_pi0fast_draft_transformer_latency.py  benchmark_pi0fast_medusa_latency.py  benchmark_pi0fast_ngram_latency.py  benchmark_pi0fast_serving_runtime.py  benchmark_pi0fast_system_components.py  benchmark_spatial_cache_compression.py  check_spec_exactness.py  debug_depth2_verify.py  debug_pi0fast_verify_equiv.py  eval_pi0fast_eagle_offline.py  eval_pi0fast_ngram_sd.py  generate_eagle_data.py  generate_libero_trajectory_head_data.py  generate_pi0fast_action_corrector_data.py  generate_pi0fast_action_gate_data.py  generate_pi0fast_eagle_data.py  generate_pi0fast_prefix_gate_data.py  generate_pi0fast_trajectory_data.py  generate_task_eagle_data.py  generate_trajectory_head_dagger_data.py  generate_trajectory_head_data.py  load_pi05_grpc.py  load_pi05_serving_runtime.py  probe_fast_action_compression.py  profile_pi05_serving.py  reproduce_readme_speedup_local.sh  run_libero_apples_to_apples.py  run_libero_specvla_distributed.py  run_libero_specvla_mirror.py  run_libero_speed_sweep.py  run_openvla_sim.py  run_pi0fast_action_dflash_eval.py  run_pi0fast_chunk_eval.py  run_pi0fast_separate_process_eval.py  run_published_sweep.py  run_readme_speedup_matrix.py  (+27 more)
server/: config.py  gpu_manager.py  grpc_service.py  main.py  (+6 more)
(+48 files in other folders)
