[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aloha-act-sim"
version = "0.1.0"
description = "ALOHA ACT policy evaluation in simulation — MVP for multi-model VLA serving platform"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}

dependencies = [
    "lerobot>=0.4.0,<0.5.0",
    "gym-aloha>=0.1.0",
    "torch>=2.2.0",
    "imageio[ffmpeg]>=2.34.0",
    "opencv-python-headless>=4.9.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
]

[tool.setuptools.packages.find]
include = ["envs*", "policies*", "eval*", "serving*", "proto*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
